--- a/css/style.css
+++ b/css/style.css
@@ -2733,12 +2733,13 @@ header.expand nav > ul > li.active > ul > li > ul > li.active a {
   }
   header .head .quick-menu {
     display: block;
+    width: calc(100% - 200px - 80px);
+    max-width: 600px;
   }
   header .head .quick-menu ul {
     display: flex;
-  }
-  header .head .quick-menu ul li {
-    margin-right: 160px;
+    justify-content: space-between;
+    align-items: center;
   }
   header .head .quick-menu ul li.active a {
     position: relative;
@@ -2850,15 +2851,30 @@ header.expand nav > ul > li.active > ul > li > ul > li.active a {
     height: 26px;
     line-height: 26px;
     margin-top: 6px;
+    text-align: center;
   }
-  header.show-menu nav > ul > li > ul > li > ul > li.active a {
-    color: #08A2DC !important;
-    text-decoration: underline;
+  header.show-menu nav > ul > li > ul > li > ul > li a {
+    position: relative;
+  }
+  header.show-menu nav > ul > li > ul > li > ul > li.active a, header.show-menu nav > ul > li > ul > li > ul > li:hover a {
+    color: #8CE0FF !important;
     opacity: 1;
   }
-  header.show-menu nav > ul > li > ul > li > ul > li:first-child.active a {
+  header.show-menu nav > ul > li > ul > li > ul > li.active a::before, header.show-menu nav > ul > li > ul > li > ul > li:hover a::before {
+    content: "";
+    display: block;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 1px;
+    background: #8CE0FF;
+  }
+  header.show-menu nav > ul > li > ul > li > ul > li:first-child.active a, header.show-menu nav > ul > li > ul > li > ul > li:first-child:hover a {
     color: #fff !important;
-    text-decoration: underline;
+  }
+  header.show-menu nav > ul > li > ul > li > ul > li:first-child.active a::before, header.show-menu nav > ul > li > ul > li > ul > li:first-child:hover a::before {
+    background: #FFFFFF;
   }
   header.show-menu nav > ul > li > ul > li > ul > li:first-child a {
     font-size: 17px;
@@ -2914,6 +2930,9 @@ header.expand nav > ul > li.active > ul > li > ul > li.active a {
   header.expand .head .btn-show-menu:after {
     transform: rotate(-45deg);
   }
+  header.expand .head .quick-menu {
+    display: none;
+  }
   header.expand nav {
     top: 92px;
     bottom: unset;
@@ -2939,16 +2958,28 @@ header.expand nav > ul > li.active > ul > li > ul > li.active a {
     width: 100%;
     max-width: 1200px;
   }
-  header.expand nav > ul > em {
+  header.expand nav > ul > li {
+    position: relative;
+    height: inherit;
+    padding: 0 93px;
+    background: none;
+    border-bottom: none;
+  }
+  header.expand nav > ul > li:first-child {
+    padding-left: 0;
+  }
+  header.expand nav > ul > li:last-child {
+    padding-right: 0;
+  }
+  header.expand nav > ul > li + li::before {
     content: "";
     display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 1px;
     height: 100%;
     background-color: #E8E8E8;
-  }
-  header.expand nav > ul > li {
-    background: none;
-    border-bottom: none;
   }
   header.expand nav > ul > li h3 a {
     display: flex;
@@ -2967,11 +2998,25 @@ header.expand nav > ul > li.active > ul > li > ul > li.active a {
     height: auto;
   }
   header.expand nav > ul > li > ul > li a {
-    display: block;
+    display: inline-block;
+    position: relative;
     height: auto;
     margin-top: 0;
     color: #454545;
     opacity: 0.7;
+  }
+  header.expand nav > ul > li > ul > li a:hover {
+    color: #08A2DC !important;
+  }
+  header.expand nav > ul > li > ul > li a:hover::before {
+    content: "";
+    display: block;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 1px;
+    background: #08A2DC;
   }
   header.expand nav > ul > li > ul > li > ul {
     margin-top: 30px;
@@ -3366,10 +3411,15 @@ main .esg .esg-list ul li a div .img img {
     padding-top: 15px;
     font-weight: 700;
     font-size: 17px;
+    letter-spacing: 0;
     background-size: auto 12.41px;
   }
   main .news-room .ak-news-list {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
     width: 50%;
+    padding: 0 60px 60px;
   }
   main .news-room .ak-news-list h3 {
     font-weight: 300;
@@ -3378,23 +3428,202 @@ main .esg .esg-list ul li a div .img img {
   }
   main .news-room .ak-news-list ul {
     display: flex;
+    margin-top: 40px;
   }
   main .news-room .ak-news-list ul li {
     width: 360px;
-    height: 485px;
+    height: 346px;
+    margin-top: 0;
+    background-size: cover;
+    margin-right: 20px;
+  }
+  main .news-room .ak-news-list ul li:last-child {
+    margin-right: 0;
+  }
+  main .news-room .ak-news-list ul li a div {
+    width: calc(100% - 25px);
+    padding: 22px 0 0 24px;
   }
   main .news-room .ak-news-list ul li a div h4 {
     font-weight: 500;
     font-size: 15px;
+    line-height: 25px;
   }
   main .news-room .ak-news-list ul li a div .con {
+    margin-top: 16px;
     font-weight: 400;
     font-size: 18px;
     line-height: 28px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
   }
   main .news-room .ak-news-list ul li a div .date {
+    margin-top: 4px;
     font-weight: 400;
     font-size: 14px;
+    line-height: 24px;
+  }
+  main .esg {
+    display: flex;
+  }
+  main .esg .esg-top, main .esg .esg-list {
+    width: 50%;
+    height: 720px;
+  }
+  main .esg .esg-top .btn-box {
+    bottom: 60px;
+    width: 100%;
+    padding: 0 60px;
+  }
+  main .esg .esg-top .btn-box h3 {
+    width: calc(50% - 20px);
+    margin-right: 20px;
+    line-height: 27px;
+  }
+  main .esg .esg-top .btn-box h3:nth-child(2n) {
+    margin-right: 0;
+  }
+  main .esg .esg-top .btn-box h3 a {
+    padding-top: 15px;
+    font-weight: 700;
+    font-size: 17px;
+    background-size: auto 12.41px;
+  }
+  main .esg .esg-list {
+    display: flex;
+    flex-direction: column;
+  }
+  main .esg .esg-list ul li {
+    height: 360px;
+  }
+  main .esg .esg-list ul li:first-child {
+    height: 360px;
+  }
+  main .esg .esg-list ul li:first-child a div {
+    background: url(../images/bg_main_esg_list01.png) no-repeat right bottom;
+    background-size: 288px 270px;
+  }
+  main .esg .esg-list ul li a {
+    padding: 50px 40px 40px 60px;
+  }
+  main .esg .esg-list ul li a div {
+    position: relative;
+    height: 100%;
+  }
+  main .esg .esg-list ul li a div h4 {
+    font-weight: 700;
+    font-size: 17px;
+    line-height: 27px;
+  }
+  main .esg .esg-list ul li a div .con {
+    margin-top: 15px;
+    font-weight: 300;
+    font-size: 28px;
+    line-height: 40px;
+  }
+  main .esg .esg-list ul li a div .img {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    min-height: auto;
+  }
+  main .esg .esg-list ul li a div .img img {
+    width: 288px;
+    height: 270px;
+  }
+  main .esg .esg-list ul li a div .img:before {
+    width: 40px;
+    height: 40px;
+    background-size: 40px 40px;
+  }
+}
+@media all and (min-width: 1321px) {
+  main .news-room .news-top {
+    height: 1080px;
+  }
+  main .news-room .news-top .btn-box {
+    max-width: 408px;
+    left: 50%;
+    margin-left: -204px;
+  }
+  main .news-room .news-top .btn-box h3 {
+    margin-right: 24px;
+  }
+  main .news-room .ak-news-list {
+    padding: 0 100px 100px;
+  }
+  main .news-room .ak-news-list ul li {
+    width: 50%;
+    height: 485px;
+  }
+  main .news-room .ak-news-list ul li:last-child {
+    margin-right: 0;
+  }
+  main .news-room .ak-news-list ul li a div {
+    width: calc(100% - 50px);
+    padding: 30px 30px 0 30px;
+  }
+  main .esg .esg-top, main .esg .esg-list {
+    height: 1080px;
+  }
+  main .esg .esg-top .btn-box h3 {
+    max-width: calc(25% - 24px);
+    margin-right: 24px;
+  }
+  main .esg .esg-top .btn-box h3:nth-child(2n) {
+    margin-right: 24px;
+  }
+  main .esg .esg-top .btn-box h3:last-child {
+    margin-right: 0;
+  }
+  main .esg .esg-list {
+    display: flex;
+    flex-direction: column;
+  }
+  main .esg .esg-list ul li {
+    height: 540px;
+  }
+  main .esg .esg-list ul li:first-child {
+    height: 540px;
+  }
+  main .esg .esg-list ul li:first-child a div {
+    background: url(../images/bg_main_esg_list01.png) no-repeat right bottom;
+    background-size: 288px 270px;
+  }
+  main .esg .esg-list ul li a {
+    padding: 90px 73px 86px 100px;
+  }
+  main .esg .esg-list ul li a div {
+    position: relative;
+    height: 100%;
+  }
+  main .esg .esg-list ul li a div h4 {
+    font-weight: 700;
+    font-size: 17px;
+    line-height: 27px;
+  }
+  main .esg .esg-list ul li a div .con {
+    font-weight: 300;
+    font-size: 28px;
+    line-height: 40px;
+  }
+  main .esg .esg-list ul li a div .img {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    min-height: auto;
+  }
+  main .esg .esg-list ul li a div .img img {
+    width: 288px;
+    height: 270px;
+  }
+  main .esg .esg-list ul li a div .img:before {
+    width: 40px;
+    height: 40px;
+    background-size: 40px 40px;
   }
 }
 @media screen and (max-aspect-ratio: 1219/685) {
