--- a/css/ui.scss
+++ b/css/ui.scss
@@ -72,6 +72,20 @@
     background-position: 50% 50%;
     background-repeat: no-repeat;
     background-size:cover;
+    &.intro-history{
+      background-image:url("../images/img_introduce_history_m.png");
+      .desc{
+        position: absolute;
+        bottom: 0;
+        width:100%;
+        padding:5px 0 3px;
+        background: rgba(13, 13, 13, 0.7);
+        font-size:get-vw(13px);
+        color:rgba(255, 255, 255, 0.9);
+        text-align:center;
+        letter-spacing: -0.02em;
+      }
+    }
     &.intro{
       background-position:68% 50%;
     }
@@ -174,6 +188,9 @@
     .visual{
       margin-top: 32px;
       height: 480px;
+      &.intro-history{
+        background-image:url("../images/img_introduce_history_m.png");
+      }
       &.intro{
         background-position:50% 50%;
       }
@@ -2356,6 +2373,81 @@
           }
         }
       }
+    }
+  }
+}
+
+/* 연혁 */
+.history-cont{
+  .history-tab{
+    position: relative;
+    &::after{
+      content:'';
+      display: block;
+      position: absolute;
+      top:get-vw(20px);
+      right:get-vw(22px);
+      width:get-vw(16px);
+      height:get-vw(16px);
+      background: url("../images/ico_arrow_s_dwon_blue.png") no-repeat 50% 50%;
+      background-size: cover;
+    }
+    .selected-tab{
+      position: relative;
+      display: flex;
+      justify-content: space-between;
+      width:100%;
+      height:get-vw(60px);
+      padding:0 get-vw(50px) 0 get-vw(33px);
+      &::before{
+        content: '';
+        display:block;
+        position: absolute;
+        bottom: 0;
+        left:0;
+        right:0;
+        height:4px;
+        background:linear-gradient(180deg, rgba(0, 0, 0, 0.07) 0%, rgba(0, 0, 0, 0) 100%);
+      }
+      li{
+        position: relative;
+        padding:get-vw(18px) get-vw(8px) get-vw(16px);
+        flex-shrink: 0;
+        &:first-child{
+          padding-left:0;
+        }
+        &::before{
+          content: '';
+          display: inline-block;
+          width:get-vw(5px);
+          height:get-vw(5px);
+          border-radius: 50%;
+          background: #E8E8E8;
+          vertical-align: middle;
+        }
+        span{
+          overflow: hidden;
+          font-size: 0;
+          line-height:1;
+          vertical-align: middle;
+        }
+        &.active{
+          &::before{
+            background: #00498C;
+          }
+          span{
+            overflow: visible;
+            margin-left:get-vw(12px);
+            margin-right:get-vw(18px);
+            font-size:get-vw(14px);
+            font-weight:700;
+            color:#00498C;
+          }
+        }
+      }
+    }
+    .select-tab{
+      display:none;
     }
   }
 }
