--- a/css/style.css
+++ b/css/style.css
@@ -3206,7 +3206,6 @@ main .news-room .ak-news-list ul li {
   width: 100%;
   height: 87.5vw;
   margin-top: 5.5555555556vw;
-  background: url(../images/bg_main_newslist01.png) no-repeat center center;
   background-size: 100% 100%;
 }
 main .news-room .ak-news-list ul li a {
@@ -3245,7 +3244,6 @@ main .news-room .ak-news-list ul li a div .date {
   color: #ABABAB;
 }
 main .news-room .ak-news-list ul li:nth-child(2) {
-  background: url(../images/bg_main_newslist02.png) no-repeat center center;
   background-size: 100% 100%;
 }
 main .esg .esg-top {
@@ -3490,6 +3488,7 @@ main .esg .esg-list ul li a div .img img {
     padding-top: 15px;
     font-weight: 700;
     font-size: 17px;
+    letter-spacing: 0;
     background-size: auto 12.41px;
   }
   main .esg .esg-list {
