--- a/css/style.css
+++ b/css/style.css
@@ -311,6 +311,20 @@ caption {
   background-repeat: no-repeat;
   background-size: cover;
 }
+.topArea .visual.intro-history {
+  background-image: url("../images/img_introduce_history_m.png");
+}
+.topArea .visual.intro-history .desc {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  padding: 5px 0 3px;
+  background: rgba(13, 13, 13, 0.7);
+  font-size: 3.6111111111vw;
+  color: rgba(255, 255, 255, 0.9);
+  text-align: center;
+  letter-spacing: -0.02em;
+}
 .topArea .visual.intro {
   background-position: 68% 50%;
 }
@@ -396,6 +410,9 @@ caption {
   .topArea .visual {
     margin-top: 32px;
     height: 480px;
+  }
+  .topArea .visual.intro-history {
+    background-image: url("../images/img_introduce_history_m.png");
   }
   .topArea .visual.intro {
     background-position: 50% 50%;
@@ -2548,6 +2565,77 @@ caption {
     color: #FFFFFF;
   }
 }
+/* 연혁 */
+.history-cont .history-tab {
+  position: relative;
+}
+.history-cont .history-tab::after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 5.5555555556vw;
+  right: 6.1111111111vw;
+  width: 4.4444444444vw;
+  height: 4.4444444444vw;
+  background: url("../images/ico_arrow_s_dwon_blue.png") no-repeat 50% 50%;
+  background-size: cover;
+}
+.history-cont .history-tab .selected-tab {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  height: 16.6666666667vw;
+  padding: 0 13.8888888889vw 0 9.1666666667vw;
+}
+.history-cont .history-tab .selected-tab::before {
+  content: "";
+  display: block;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 4px;
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0.07) 0%, rgba(0, 0, 0, 0) 100%);
+}
+.history-cont .history-tab .selected-tab li {
+  position: relative;
+  padding: 5vw 2.2222222222vw 4.4444444444vw;
+  flex-shrink: 0;
+}
+.history-cont .history-tab .selected-tab li:first-child {
+  padding-left: 0;
+}
+.history-cont .history-tab .selected-tab li::before {
+  content: "";
+  display: inline-block;
+  width: 1.3888888889vw;
+  height: 1.3888888889vw;
+  border-radius: 50%;
+  background: #E8E8E8;
+  vertical-align: middle;
+}
+.history-cont .history-tab .selected-tab li span {
+  overflow: hidden;
+  font-size: 0;
+  line-height: 1;
+  vertical-align: middle;
+}
+.history-cont .history-tab .selected-tab li.active::before {
+  background: #00498C;
+}
+.history-cont .history-tab .selected-tab li.active span {
+  overflow: visible;
+  margin-left: 3.3333333333vw;
+  margin-right: 5vw;
+  font-size: 3.8888888889vw;
+  font-weight: 700;
+  color: #00498C;
+}
+.history-cont .history-tab .select-tab {
+  display: none;
+}
+
 /* Layout Style*/
 body.fixed {
   position: fixed;
@@ -3187,7 +3275,8 @@ main .news-room .news-top .btn-box h3:last-child {
 main .news-room .news-top .btn-box h3 a {
   display: inline-block;
   width: 100%;
-  padding-top: 1.6666666667vw;
+  height: 11.1111111111vw;
+  line-height: 11.1111111111vw;
   border-top: 1px solid #fff;
   font-size: 4.1666666667vw;
   font-weight: 700;
@@ -3282,7 +3371,8 @@ main .esg .esg-top .btn-box h3:nth-child(2n) {
 main .esg .esg-top .btn-box h3 a {
   display: inline-block;
   width: 100%;
-  padding-top: 1.6666666667vw;
+  height: 11.1111111111vw;
+  line-height: 11.1111111111vw;
   border-top: 1px solid #fff;
   font-size: 4.1666666667vw;
   font-weight: 700;
@@ -3406,7 +3496,9 @@ main .esg .esg-list ul li a div .img img {
     line-height: 27px;
   }
   main .news-room .news-top .btn-box h3 a {
-    padding-top: 15px;
+    height: 40px;
+    line-height: 40px;
+    padding-top: 0;
     font-weight: 700;
     font-size: 17px;
     letter-spacing: 0;
@@ -3485,7 +3577,9 @@ main .esg .esg-list ul li a div .img img {
     margin-right: 0;
   }
   main .esg .esg-top .btn-box h3 a {
-    padding-top: 15px;
+    height: 40px;
+    line-height: 40px;
+    padding-top: 0;
     font-weight: 700;
     font-size: 17px;
     letter-spacing: 0;
