--- a/css/style.css
+++ b/css/style.css
@@ -412,7 +412,19 @@ caption {
     height: 480px;
   }
   .topArea .visual.intro-history {
-    background-image: url("../images/img_introduce_history_m.png");
+    background-image: url("../images/img_introduce_history.png");
+  }
+  .topArea .visual.intro-history .desc {
+    bottom: 0;
+    left: 50%;
+    width: 405px;
+    height: 40px;
+    transform: translateX(80px);
+    padding: 9px 15px 7px;
+    font-size: 14px;
+    text-align: center;
+    letter-spacing: 0;
+    line-height: 1.7;
   }
   .topArea .visual.intro {
     background-position: 50% 50%;
@@ -2579,6 +2591,8 @@ caption {
   height: 4.4444444444vw;
   background: url("../images/ico_arrow_s_dwon_blue.png") no-repeat 50% 50%;
   background-size: cover;
+  transition: all 0.3s ease-out;
+  z-index: 1;
 }
 .history-cont .history-tab .selected-tab {
   position: relative;
@@ -2634,8 +2648,253 @@ caption {
 }
 .history-cont .history-tab .select-tab {
   display: none;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: auto;
+  padding: 4.1666666667vw 9.1666666667vw 6.6666666667vw;
+  background: #FFFFFF;
+  z-index: 1;
+}
+.history-cont .history-tab .select-tab li + li {
+  margin-top: 3.8888888889vw;
+}
+.history-cont .history-tab .select-tab li a {
+  font-size: 3.8888888889vw;
+  color: #ABABAB;
+}
+.history-cont .history-tab .select-tab li a::before {
+  content: "";
+  display: inline-block;
+  margin-right: 12px;
+  width: 1.3888888889vw;
+  height: 1.3888888889vw;
+  border-radius: 50%;
+  background: #E8E8E8;
+  vertical-align: middle;
+}
+.history-cont .history-tab .select-tab li.active a {
+  font-weight: 700;
+  color: #00498C;
+}
+.history-cont .history-tab.active::after {
+  transform: rotate(180deg);
+}
+.history-cont .history-tab.active .select-tab {
+  display: block;
+}
+.history-cont .history-wrap {
+  padding: 6.6666666667vw 6.6666666667vw 13.8888888889vw;
+}
+.history-cont .history-wrap .year-wrap {
+  position: relative;
+  padding-left: 11.1111111111vw;
+  padding-bottom: 14.4444444444vw;
+}
+.history-cont .history-wrap .year-wrap:last-child {
+  padding-bottom: 0;
+}
+.history-cont .history-wrap .year-wrap::before, .history-cont .history-wrap .year-wrap::after {
+  content: "";
+  display: block;
+  position: absolute;
+}
+.history-cont .history-wrap .year-wrap::before {
+  top: 1.1111111111vw;
+  left: 0;
+  width: 6.9444444444vw;
+  height: 6.9444444444vw;
+  background: url("../images/ico_history_close.png") no-repeat 50% 50%;
+  background-size: cover;
+}
+.history-cont .history-wrap .year-wrap::after {
+  top: 1.1111111111vw;
+  left: 3.4722222222vw;
+  width: 1px;
+  height: 100%;
+  background: #E8E8E8;
+  z-index: -1;
+}
+.history-cont .history-wrap .year-wrap .year {
+  font-weight: 700;
+  font-size: 6.6666666667vw;
+  color: #00498C;
+}
+.history-cont .history-wrap .year-wrap ul {
+  margin-top: 4.7222222222vw;
+}
+.history-cont .history-wrap .year-wrap li {
+  position: relative;
+  display: flex;
+  justify-content: flex-start;
+}
+.history-cont .history-wrap .year-wrap li + li {
+  margin-top: 4.1666666667vw;
+}
+.history-cont .history-wrap .year-wrap li::before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 1.9444444444vw;
+  left: -8.1944444444vw;
+  width: 1.3888888889vw;
+  height: 1.3888888889vw;
+  border-radius: 50%;
+  background: #00498C;
+}
+.history-cont .history-wrap .year-wrap .month {
+  flex-shrink: 0;
+  font-weight: 700;
+  font-size: 4.4444444444vw;
+  color: #08A2DC;
+}
+.history-cont .history-wrap .year-wrap .desc {
+  margin-left: 2.2222222222vw;
+}
+.history-cont .history-wrap .year-wrap .desc p {
+  font-size: 4.1666666667vw;
+  color: #454545;
+  word-break: keep-all;
+}
+.history-cont .history-wrap .year-wrap .desc p + * {
+  margin-top: 2.7777777778vw;
+}
+.history-cont .history-wrap .year-wrap .desc .img {
+  width: 100%;
+  font-size: 0;
+}
+.history-cont .history-wrap .year-wrap .desc .img img {
+  width: 100%;
+  height: auto;
+}
+.history-cont .history-wrap .year-wrap .desc .img + * {
+  margin-top: 2.7777777778vw;
 }
 
+@media all and (min-width: 961px) {
+  /* 연혁 */
+  .history-cont {
+    display: flex;
+    justify-content: space-between;
+    padding: 80px 0 100px;
+    width: 1200px;
+    margin: 0 auto;
+  }
+  .history-cont .history-tab {
+    position: relative;
+  }
+  .history-cont .history-tab::after {
+    content: none;
+  }
+  .history-cont .history-tab .selected-tab {
+    display: none;
+  }
+  .history-cont .history-tab .select-tab {
+    display: block;
+    position: relative;
+    width: 120px;
+    height: auto;
+    padding: 0;
+    background: transparent;
+  }
+  .history-cont .history-tab .select-tab li + li {
+    margin-top: 20px;
+  }
+  .history-cont .history-tab .select-tab li a {
+    font-size: 16px;
+  }
+  .history-cont .history-tab .select-tab li a::before {
+    content: "";
+    display: inline-block;
+    width: 5px;
+    height: 5px;
+  }
+  .history-cont .history-tab .select-tab li.active a, .history-cont .history-tab .select-tab li:hover a {
+    font-weight: 700;
+    color: #00498C;
+  }
+  .history-cont .history-tab .select-tab li.active a::before, .history-cont .history-tab .select-tab li:hover a::before {
+    background: #00498C;
+  }
+  .history-cont .history-wrap {
+    padding: 0;
+    margin-left: 120px;
+  }
+  .history-cont .history-wrap .year-wrap {
+    position: relative;
+    padding-left: 173px;
+    padding-bottom: 80px;
+  }
+  .history-cont .history-wrap .year-wrap:last-child {
+    padding-bottom: 0;
+  }
+  .history-cont .history-wrap .year-wrap::before, .history-cont .history-wrap .year-wrap::after {
+    content: "";
+    display: block;
+    position: absolute;
+  }
+  .history-cont .history-wrap .year-wrap::before {
+    top: 0;
+    left: 118px;
+    width: 25px;
+    height: 25px;
+  }
+  .history-cont .history-wrap .year-wrap::after {
+    top: 0;
+    left: 130px;
+    width: 1px;
+    height: 100%;
+    background: #E8E8E8;
+    z-index: -1;
+  }
+  .history-cont .history-wrap .year-wrap .year {
+    position: absolute;
+    top: -8px;
+    left: 0;
+    font-size: 36px;
+  }
+  .history-cont .history-wrap .year-wrap ul {
+    margin-top: 0;
+  }
+  .history-cont .history-wrap .year-wrap li + li {
+    margin-top: 20px;
+  }
+  .history-cont .history-wrap .year-wrap li::before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 10px;
+    left: -45px;
+    width: 5px;
+    height: 5px;
+  }
+  .history-cont .history-wrap .year-wrap li:first-child::before {
+    content: none;
+  }
+  .history-cont .history-wrap .year-wrap .month {
+    font-size: 18px;
+  }
+  .history-cont .history-wrap .year-wrap .desc {
+    margin-left: 20px;
+  }
+  .history-cont .history-wrap .year-wrap .desc p {
+    font-size: 18px;
+  }
+  .history-cont .history-wrap .year-wrap .desc p + * {
+    margin-top: 6px;
+  }
+  .history-cont .history-wrap .year-wrap .desc .img {
+    width: 100%;
+    font-size: 0;
+  }
+  .history-cont .history-wrap .year-wrap .desc .img img {
+    width: 100%;
+    height: auto;
+  }
+  .history-cont .history-wrap .year-wrap .desc .img + * {
+    margin-top: 6px;
+  }
+}
 /* Layout Style*/
 body.fixed {
   position: fixed;
@@ -2695,16 +2954,16 @@ header .head .btn-show-menu:after {
 header nav {
   display: none;
 }
-header.top {
+header.main-top {
   background-color: transparent;
 }
-header.top .head h1 a img:nth-child(1) {
+header.main-top .head h1 a img:nth-child(1) {
   display: block;
 }
-header.top .head h1 a img:nth-child(2) {
+header.main-top .head h1 a img:nth-child(2) {
   display: none;
 }
-header.top .head .btn-show-menu:before, header.top .head .btn-show-menu:after {
+header.main-top .head .btn-show-menu:before, header.main-top .head .btn-show-menu:after {
   background-color: #fff;
 }
 header.expand {
@@ -2813,8 +3072,14 @@ header.expand nav > ul > li.active > ul > li > ul > li.active a {
   header {
     height: 92px;
   }
+  header.top .head .quick-menu {
+    display: none;
+  }
   header.top .head .quick-menu ul li a {
     color: #fff;
+  }
+  header.main-top .head .quick-menu {
+    display: none;
   }
   header .head h1 a img {
     height: 32px;
@@ -3838,6 +4103,250 @@ footer .link:after {
   }
   footer .link:after {
     display: none;
+  }
+}
+.popup {
+  position: fixed;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  display: none;
+  width: 100vw;
+  height: 100vh;
+  z-index: 10;
+  overflow: hidden;
+}
+.popup:before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  display: block;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 0;
+}
+.popup.active {
+  display: block;
+}
+.popup .pop-top {
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 16.6666666667vw;
+  padding: 0 5.5555555556vw 0 6.6666666667vw;
+  box-sizing: border-box;
+  background-color: #00498C;
+}
+.popup .pop-top h5 {
+  font-weight: 500;
+  font-size: 6.1111111111vw;
+  letter-spacing: -0.03em;
+  color: #fff;
+}
+.popup .pop-top h5 em {
+  margin-left: 1.1111111111vw;
+  font-size: 3.8888888889vw;
+  color: #8CE0FF;
+}
+.popup .pop-top .btn-close {
+  width: 8.3333333333vw;
+  height: 8.3333333333vw;
+  background: url(../images/ico_close_white.png) no-repeat center;
+  background-size: 8.3333333333vw;
+}
+.popup .pop-con {
+  height: 100vh;
+  padding: 22.2222222222vw 6.6666666667vw 5.5555555556vw;
+  overflow: hidden;
+  overflow-y: auto;
+  background-color: #fff;
+}
+.popup .pop-con > div {
+  padding-bottom: 6.6666666667vw;
+  margin-bottom: 6.6666666667vw;
+  border-bottom: 1px solid #0D0D0D;
+}
+.popup .pop-con > div:last-child {
+  margin-bottom: 0;
+  border-bottom: 0;
+}
+.popup .pop-con > div h6 {
+  font-weight: 400;
+  font-size: 5.2777777778vw;
+  line-height: 8.0555555556vw;
+  letter-spacing: -0.03em;
+  color: #0D0D0D;
+}
+.popup .pop-con > div > ul.etc li {
+  font-weight: 400;
+  font-size: 3.8888888889vw;
+  line-height: 6.1111111111vw;
+  color: #454545;
+}
+.popup .pop-con > div > ul.etc li p {
+  font-weight: 700;
+  font-size: 4.1666666667vw;
+  line-height: 6.9444444444vw;
+  color: #454545;
+}
+.popup .pop-con > div > ul > li {
+  margin-top: 2.7777777778vw;
+  font-weight: 400;
+  font-size: 3.8888888889vw;
+  line-height: 6.1111111111vw;
+  color: #454545;
+}
+.popup .pop-con > div > ul > li > p {
+  padding-bottom: 0.5555555556vw;
+  font-weight: 700;
+  font-size: 4.1666666667vw;
+  line-height: 6.9444444444vw;
+  color: #00498C;
+}
+.popup .pop-con > div > ul > li > ul > li {
+  font-weight: 400;
+  font-size: 3.8888888889vw;
+  line-height: 6.1111111111vw;
+  color: #454545;
+  padding-left: 5.5555555556vw;
+}
+.popup .pop-con > div > ul > li > ul > li > em {
+  margin-left: -5.5555555556vw;
+  margin-right: 1.6666666667vw;
+}
+.popup .pop-con > div > ul > li > ul > li > p {
+  margin-top: 1.3888888889vw;
+  font-weight: 500;
+  font-size: 3.8888888889vw;
+  line-height: 6.1111111111vw;
+  color: #777;
+}
+.popup .pop-con > div > ul > li > ul > li > ul > li {
+  margin-left: 12.5vw;
+  font-size: 3.8888888889vw;
+  line-height: 6.1111111111vw;
+  color: #777;
+}
+.popup .pop-con > div > ul > li > ul > li > ul > li > em {
+  margin-left: -6.9444444444vw;
+  margin-right: 1.6666666667vw;
+}
+
+@media all and (min-width: 961px) {
+  .popup .pop-top {
+    height: 80px;
+    padding: 0 50px;
+  }
+  .popup .pop-top h5 {
+    font-weight: 500;
+    font-size: 28px;
+    line-height: 40px;
+    letter-spacing: -0.03em;
+  }
+  .popup .pop-top h5 em {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 26px;
+  }
+  .popup .pop-top .btn-close {
+    width: 24px;
+    height: 24px;
+    background-size: 24px;
+  }
+  .popup .pop-con {
+    padding: 125px 50px 50px;
+  }
+  .popup .pop-con > div {
+    padding-bottom: 45px;
+    margin-bottom: 45px;
+  }
+  .popup .pop-con > div:last-child {
+    margin-bottom: 0;
+    border-bottom: 0;
+  }
+  .popup .pop-con > div h6 {
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 36px;
+    letter-spacing: -0.02em;
+    color: #0D0D0D;
+  }
+  .popup .pop-con > div > ul.etc li {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 26px;
+  }
+  .popup .pop-con > div > ul.etc li p {
+    font-weight: 700;
+    font-size: 17px;
+    line-height: 27px;
+  }
+  .popup .pop-con > div > ul > li {
+    margin-top: 24px;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 26px;
+    color: #454545;
+  }
+  .popup .pop-con > div > ul > li > p {
+    padding-bottom: 2px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 26px;
+    color: #00498C;
+  }
+  .popup .pop-con > div > ul > li > ul > li {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 26px;
+    color: #454545;
+    padding-left: 20px;
+  }
+  .popup .pop-con > div > ul > li > ul > li > em {
+    margin-left: -20px;
+    margin-right: 6px;
+  }
+  .popup .pop-con > div > ul > li > ul > li > p {
+    margin-top: 5px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 26px;
+    color: #777;
+  }
+  .popup .pop-con > div > ul > li > ul > li > ul > li {
+    margin-left: 45px;
+    font-size: 16px;
+    line-height: 26px;
+    color: #777;
+  }
+  .popup .pop-con > div > ul > li > ul > li > ul > li > em {
+    margin-left: -25px;
+    margin-right: 6px;
+  }
+}
+@media all and (min-width: 1201px) {
+  .popup.active {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .popup .pop-wrap {
+    position: relative;
+    width: 1200px;
+    height: 70vh;
+    overflow: hidden;
+  }
+  .popup .pop-wrap .pop-con {
+    height: calc(100% - 80px);
   }
 }
 
