--- a/css/style.css
+++ b/css/style.css
@@ -2707,6 +2707,9 @@ caption {
   background: url("../images/ico_history_close.png") no-repeat 50% 50%;
   background-size: cover;
 }
+.history-cont .history-wrap .year-wrap.active::before {
+  background: url("../images/ico_history_open.png") no-repeat 50% 50%;
+}
 .history-cont .history-wrap .year-wrap::after {
   top: 1.1111111111vw;
   left: 3.4722222222vw;
@@ -2796,6 +2799,10 @@ caption {
     height: auto;
     padding: 0;
     background: transparent;
+  }
+  .history-cont .history-tab .select-tab.fix {
+    position: fixed;
+    top: 92px;
   }
   .history-cont .history-tab .select-tab li + li {
     margin-top: 20px;
