--- a/css/ui.scss
+++ b/css/ui.scss
@@ -72,6 +72,7 @@
     background-position: 50% 50%;
     background-repeat: no-repeat;
     background-size:cover;
+    &.value{background-image:url("../images/img_value_m.png")}
     &.intro-history{
       background-image:url("../images/img_introduce_history_m.png");
       .desc{
@@ -188,6 +189,7 @@
     .visual{
       margin-top: 32px;
       height: 480px;
+      &.value{background-image:url(../images/img_value.png)}
       &.intro-history{
         background-image:url("../images/img_introduce_history.png");
         .desc{
