--- a/css/ui.scss
+++ b/css/ui.scss
@@ -72,6 +72,7 @@
     background-position: 50% 50%;
     background-repeat: no-repeat;
     background-size:cover;
+    &.esg-news{background-image:url("../images/img_esgNews_m.png");}
     &.ak-news{background-image:url("../images/img_akNews_m.png");}
     &.management{background-image:url("../images/img_esg_management_m.png");}
     &.value{background-image:url("../images/img_value_m.png");}
@@ -196,6 +197,7 @@
     .visual{
       margin-top: 32px;
       height: 480px;
+      &.esg-news{background-image:url("../images/img_esgNews.png");}
       &.ak-news{background-image:url("../images/img_akNews.png");}
       &.management{background-image:url("../images/img_esg_management.png");}
       &.value{background-image:url("../images/img_value.png");}
